# twinkle

./: .dockerignore  .gitignore  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  Dockerfile  Dockerfile.indi_server  docker-compose.yml  rust-project.bak.json
.github/workflows/: indi_server.yaml  release_phd2_exporter.yaml  twinkle.yaml
alnitak/: next.config.js  package-lock.json  package.json
alnitak/src/app/: page.tsx  tweet.tsx  tweetList.tsx
automation/terraform/: .terraform.lock.hcl  github.tf  terraform.tfstate
client/: Cargo.toml
client/src/: lib.rs  notify.rs
client/src/stream_ext/: changes.rs
dioxus-frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
dioxus-frontend/.cargo/: config.toml
dioxus-frontend/src/: fits.rs  image_display.rs  lib.rs  main.rs  webgl_renderer.rs  webgpu_renderer.rs
dioxus-frontend/src/shaders/: image.wgsl
egui-frontend/: Cargo.toml  Trunk.toml  index.html
egui-frontend/.cargo/: config.toml
egui-frontend/assets/: sw.js
egui-frontend/src/: agent.rs  app.rs  capture.rs  counts.rs  flats.rs  lib.rs  main.rs  settings.rs  sync_task.rs  task.rs
egui-frontend/src/fits/: analysis.rs  fits_render.rs  fits_widget.rs  image_mesh.rs  image_view.rs  line_mesh.rs  mod.rs
egui-frontend/src/fits/shaders/: circle_fragment.glsl  fits_fragment.glsl  fits_vertex.glsl
egui-frontend/src/indi/: agent.rs  control.rs  mod.rs
egui-frontend/src/indi/views/: device.rs  image_device.rs  mod.rs  tab.rs
egui-frontend/src/indi/widgets/: device.rs  mod.rs  parameter.rs
fits_inspect/: Cargo.toml
fits_inspect/benches/: benchmark.rs
fits_inspect/src/: lib.rs
fits_inspect/src/analysis/: astigmatism.rs  mod.rs  sep.rs  statistics.rs
fits_inspect/src/analysis/collimation/: defocused_star.rs  mod.rs  star_peak_offset.rs
fits_inspect/src/calibration/: mod.rs
fits_inspect/src/egui/: fits_render.rs  fits_widget.rs  focus_graph.rs  image_mesh.rs  line_mesh.rs  mod.rs
fits_inspect/src/egui/shaders/: fits_fragment.glsl  fits_vertex.glsl
gtk_client/: Cargo.toml
gtk_client/src/: main.rs
indi/: Cargo.toml  Dockerfile  README.md
indi/src/: lib.rs  main.rs
indi/src/client/: action.rs  active_device.rs  active_parameter.rs  device.rs  mod.rs  notify.rs  sink.rs  stream.rs  tcpstream.rs  websocket.rs
indi/src/client/websocket/: mod.rs  native.rs  wasm.rs
indi/src/deserialize/: blob_vector.rs  del_property.rs  get_properties.rs  light_vector.rs  message.rs  mod.rs  number_vector.rs  switch_vector.rs  text_vector.rs
indi/src/serialization/: blob_vector.rs  del_property.rs  device.rs  get_properties.rs  light_vector.rs  message.rs  mod.rs  number_vector.rs  switch_vector.rs  tests.rs  text_vector.rs
indi/src/telescope/: filter.rs  filter_wheel.rs  flat_panel.rs  mod.rs  parameter_with_config.rs  settings.rs
indi/src/telescope/camera/: binning.rs  mod.rs
indi/src/telescope/flat_panel/: mod.rs
indi_exporter/: Cargo.toml  Dockerfile  docker-compose.yml
indi_exporter/prometheus/: prometheus.yml
indi_exporter/src/: main.rs
leptos-frontend/: Cargo.toml
leptos-frontend/src/: main.rs
lucky/: Cargo.toml
lucky/src/: main.rs
notify/: Cargo.toml
notify/src/: lib.rs
phd2/: Cargo.toml  README.md
phd2/src/: lib.rs  main.rs  serialization.rs  tests.rs
phd2_exporter/: Cargo.toml
phd2_exporter/src/: async_middleware.rs  config.rs  lib.rs  main.rs  metrics.rs  serialization.rs
prometheus/: prometheus.yml
rigel/: Cargo.toml  README.md
rigel/src/: app.rs  main.rs
twinkle/: .gitignore  .tmp.fits.REMOVED.git-id  Cargo.toml  file.fits  tmp.fits.REMOVED.git-id
twinkle/src/: backend.rs  fits_viewer.rs  lib.rs  main.rs
twinkle/src/flat/: mod.rs
twinkle_api/: Cargo.toml
twinkle_api/src/: analysis.rs  capture.rs  fits.rs  flats.rs  indi.rs  lib.rs  settings.rs
twinkle_client/: Cargo.toml
twinkle_client/src/: agent.rs  lib.rs  notify.rs  task.rs
twinkle_client/src/stream_ext/: mod.rs
twinkle_server/: Cargo.toml  diesel.toml
twinkle_server/migrations/2025-05-04-152142_create_settings/: down.sql  up.sql
twinkle_server/src/: capture.rs  counts.rs  db.rs  indi.rs  lib.rs  schema.rs  settings.rs  sqlite_mapping.rs  tracing_broadcast.rs  websocket_handler.rs
twinkle_server/src/flats/: logic.rs  mod.rs
twinkle_server/src/stream/: mod.rs
twinkle_server/src/stream/changeable/: arc.rs  hashmap.rs  mod.rs
twinkle_server/src/telescope/: filter_wheel.rs  mod.rs  parameter_with_config.rs
twinkle_server/src/telescope/camera/: binning.rs  capture_format.rs  cooler.rs  image_type.rs  mod.rs  transfer_format.rs
twinkle_server/src/telescope/flat_panel/: mod.rs
