[profile.dev.package.fits_inspect]
opt-level = 3

[workspace]
members = [
    "egui-frontend",
    "fits_inspect",
    "indi",
    "leptos-frontend",
    "phd2",
    "twinkle_client",
    "twinkle_server",
]
resolver = "2"

[[workspace.metadata.leptos]]
name = "leptos-project"
bin-package = "rigel"
lib-package = "rigel"

[workspace.dependencies]
