[package]
name = "dioxus-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "dioxus-frontend"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
ndarray = { version = "0.16", features = ["serde"] }
base64 = "0.22"
wasm-bindgen = "0.2"
fitsrs = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d", 
    "ImageData",
    "Document",
    "Window",
    "console"
] }