[package]
name = "fits_inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convolutions-rs = "0.3.4"
eframe = "0.20.1"
egui = "0.20.1"
fitsio = { version = "0.20.0", features = ["array"] }
image = "0.24.5"
median = "0.3.2"
ndarray = "0.15.6"
ndarray-conv = "0.1.3"
ndarray-ndimage = "0.3.0"
num-traits = "0.2.15"
sep-sys = "1.2.0"

[dev-dependencies]
criterion="0.3"

[[bench]]
name="benchmark"
harness = false
