[package]
name = "indi"
description = "Client library for interfacing with the Instrument Neutral Distributed Interface (INDI) protocol."
version = "4.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cconstantine/twinkle/tree/master/indi"
repository = "https://github.com/cconstantine/twinkle/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version="~0.33.0", features=["encoding", "serialize", "serde", "tokio", "async-tokio"]}
chrono = "~0.4"
encoding = "0.2"
base64 = "0.13.0"
log = "0.4.17"
derivative = "2.2.0"
fitsio = {version="0.21.2", features = ["array"] }
libc = "0.2.139"
ndarray = "0.15.6"
crossbeam-channel = "0.5.6"
once_cell = "1.17.1"
tokio = {version = "1.40", features = ["macros", "rt-multi-thread"]}
tokio-stream = { version = "0", features = ["sync"] }
serde = { version = "1.0.164", features = ["derive"] }
twinkle_client.workspace = true
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3"
tokio-tungstenite = "0.24.0"

[dev-dependencies]
#bytes = "1.2.1"
