[package]
name = "indi"
description = "Client library for interfacing with the Instrument Neutral Distributed Interface (INDI) protocol."
version = "5.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cconstantine/twinkle/tree/master/indi"
repository = "https://github.com/cconstantine/twinkle/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version="~0.33.0", features=["encoding", "serialize", "serde", "tokio", "async-tokio"]}
chrono = {version = "~0.4" }
encoding = {version = "0.2" }
base64 = {version = "0.13.0" }
log = {version = "0.4.17" }
derivative = {version = "2.2.0" }
fitsio = {version="0.21.2", features = ["array"], optional=true }
libc = {version = "0.2.139", optional=true }
ndarray = {version = "0.15.6" }
crossbeam-channel = {version = "0.5.6" }
once_cell = {version = "1.17.1" }
tokio = {version = "1.40", features = ["macros"]}
tokio-stream = { version = "0", features = ["sync"] }
serde = { version = "1.0.164", features = ["derive"] }
twinkle_client = { path = "../twinkle_client", version="0.2.3" }
tracing = "0.1.41"
futures = { version = "0.3" }
wasm-bindgen-futures = {version="0.4", optional=true}
tokio-tungstenite-wasm = {version="0.4", optional=true}
fitsrs = "0.3.2"
derive_more = { version = "2.0.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-test = "0.2.5"
futures-test = "0.3.31"

[features]
default = []
full = ["fitsio"]
fitsio = [
    "dep:libc",
    "dep:fitsio",
]

wasm = [
    "dep:wasm-bindgen-futures",
    "dep:tokio-tungstenite-wasm"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"]}
tokio-tungstenite = {version = "0.24.0"}
