[package]
name = "leptos-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
indi = { path="../indi", features=["serde"] }
leptos-use = "0.13.5"
codee = "0.2.0"
serde_json = "1.0.132"
quick-xml = {version="~0.33.0", features=["encoding", "serialize", "serde"]}
