[package]
name = "leptos-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "~0.7.0", features = ["csr"] }
indi = { path="../indi", features=["wasm"] }
twinkle_client = { path = "../twinkle_client" }
futures = "0.3.31"
console_error_panic_hook = "0.1.7"
tokio-stream = "0.1.17"
tracing-wasm = "0.2.1"
console_log = "1.0.0"
log = "0.4.22"
tokio-tungstenite-wasm = "0.4.0"
