[package]
name = "phd2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/cconstantine/twinkle/tree/master/phd2"
repository = "https://github.com/cconstantine/twinkle/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
itertools = "0.10.5"
pin-project = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_tuple = "0.5.0"
tokio = { path="/home/cconstantine/workspace/tokio/tokio", features = ["full"] }
tokio-serde = "0.8.0"
tokio-stream = { path="/home/cconstantine/workspace/tokio/tokio-stream" }
tokio-util = { path="/home/cconstantine/workspace/tokio/tokio-util", features = ["codec", "io"] }

[features]
test_phd2_simulator=[]