[package]
name = "phd2_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
prometheus_exporter = "0.8.5"
tokio = { path="/home/cconstantine/workspace/tokio/tokio", features = ["full"] }
tokio-util = { path="/home/cconstantine/workspace/tokio/tokio-util", features = ["codec", "io"] }
phd2 = { path="/home/cconstantine/workspace/twinkle/phd2" }

