[package]
name = "phd2_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
prometheus_exporter = "0.8.5"
tokio = { version = "1.26.0", features = ["full"] }
phd2 = { path="/home/cconstantine/workspace/twinkle/phd2" }

