[package]
name = "twinkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1"}
egui = "0.20.1"
serde = { version = "1", features = ["derive"] }
indi = { path = "../indi" }

tracing-subscriber = "0.3.16"
tokio = {version = "1.21.2", features = ["full"]}
fits_inspect = { path = "../fits_inspect" }
fitsio = {version = "0.21.2", features = ["array"] }
tokio-stream = "0.1.12"
ndarray = "0.15.6"
opencv = "0.82.1"
