[package]
name = "twinkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1"}
egui = "0.20.1"
serde = { version = "1", features = ["derive"] }

tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }
fits_inspect = { path = "../fits_inspect" }
fitsio = {version="0.21.2", features = ["array"] }
tokio-stream = "0.1.12"
ndarray = "0.15.6"
actix-web = "4.3.1"
actix-rt = "2.8.0"
env_logger = "0.10.0"
uuid = "1.3.4"
chrono = "0.4.26"
rand = "0.8.5"
actix-web-actors = "4.2.0"
actix = "0.13.0"
futures-util = { version = "0.3.28", features = ["channel"] }
actix-ws = "0.2.5"
pin-project = "1.1.0"
twinkle_client.workspace = true
indi = { path = "../indi" }
