[package]
name = "twinkle_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
ndarray = {version = "0.16.1", features=["serde"]}
fitsrs = "0.3.2"
tracing = "0.1"
rmp-serde = "1.3.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
twinkle_client = { path = "../twinkle_client" }
serde_json = "1.0.140"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7.5", features = ["ws"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-tungstenite-wasm = "0.4.0"
