[package]
name = "twinkle_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
ndarray = {version = "0.16.1", features=["serde"]}
fitsrs = "0.3.2"
tracing = "0.1"
rmp-serde = "1.3.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
twinkle_client = { path = "../twinkle_client" }
serde_json = "1.0.140"

axum = { version = "0.7.5", features = ["ws"], optional = true }
tokio-tungstenite-wasm = {version = "0.4.0", optional = true}

[features]
default = ["native"]
wasm = ["dep:tokio-tungstenite-wasm"]
native = ["dep:axum"]