[package]
name = "twinkle_client"
description = "Helper for making stateful clients that can notify on change"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pin-project-lite = "0.2.9"
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = {version="3.0.3", features=["wasm-bindgen"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = {version="3.0.3"}
