[package]
name = "twinkle_client"
description = "Helper for making stateful clients that can notify on change"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
pin-project-lite = "0.2.9"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util", "rt-multi-thread"] }
tracing-test = {version = "0.2.5", features = ["no-env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-timer = {version="3.0.3", features=["wasm-bindgen"]}
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = {version="3.0.3"}
