[package]
name = "twinkle_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
indi = { path = "../indi", features = ["default", "fitsio"] }
serde_json = "1.0.117"
futures = "0.3"
headers = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
pin-project-lite = "0.2.14"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
urlencoding = "2.1.3"
reqwest = "0.12.14"
fitsrs = "0.3.2"
ndarray = {version = "0.16.1", features=["serde"]}
rmp-serde = "1.3.0"
twinkle_api = { path = "../twinkle_api" }

[dev-dependencies]
websocat = "1.13.0"
