[package]
name = "twinkle_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
indi = { path = "../indi", features = ["full"] }
serde_json = "1.0.117"
futures = "0.3"
headers = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
pin-project-lite = "0.2.14"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
urlencoding = "2.1.3"
reqwest = "0.12.14"
fitsrs = "0.3.2"
ndarray = {version = "0.16.1", features=["serde"]}
rmp-serde = "1.3.0"
twinkle_api = { path = "../twinkle_api" }
twinkle_client = { path = "../twinkle_client" }
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
once_cell = "1.21.3"
chrono = "0.4.40"
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5.2", features = ["sqlite", "tokio"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

[dev-dependencies]
websocat = "1.13.0"
tracing-test = {version = "0.2.5", features = ["no-env-filter"] }
